--- a/style.css
+++ b/style.css
@@ -999,5 +999,22 @@ h6 {
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
+
+.libutton {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 7px;
+    text-align: center;
+    outline: none;
+    text-decoration: none !important;
+    color: #ffffff !important;
+    width: 200px;
+    height: 32px;
+    border-radius: 16px;
+    background-color: #0A66C2;
+    font-family: "SF Pro Text", Helvetica, sans-serif;
+  }
+
 Footer
 © 2022 GitHub, In
